--- a/W4/W4hw1.html
+++ b/W4/W4hw1.html
@@ -5,11 +5,11 @@
 
 <body>
 
- <h1 style="color:Pink;font-size:300%;">Welcome to my website</h1>
-
-<p style="color:Brown;">Have a nice day!</p>
+ <h1 style="color:Pink;font-size:300%;text-align:center;">Welcome to my website</h1>
+  <h1>Welcome<i>to<i>my<i>website</i></h1> &lt
+&nbsp
+<p style="color:Brown;font-size:150%;font-family:verdana;text-align:center;">Have a nice day!</p>
 
   </body>
   </html>
-
 
