--- a/W4/W4hw1.html
+++ b/W4/W4hw1.html
@@ -5,10 +5,12 @@
 
 <body>
 
- <h1 style="color:Pink;font-size:300%;text-align:center;">Welcome <i> to <i>my website</i></h1>&lt
- 
-&nbsp
-<p style="color:Brown;font-size:150%;font-family:verdana;text-align:center;">Have a nice day!</p>
+ <h1 style="color:Pink;font-size:300%;text-align:center;"><u>Welcome <i> to my </i>website</u></i></h1>
+<br/><h6 style="color:Green;font-size:150%;background-color:powderblue;font-family:Times New Roman;">I.&nbspAbout me</h6>
+<h6 style="color:Green;font-size:140%;background-color:powderblue;font-family:Times New Roman;">II.&nbspMy Daily life</h6>
+
+<br/>
+<p style="color:Brown;font-size:150%;font-family:verdana;text-align:center;"><i>Have a nice day!</i></p>
 
   </body>
   </html>
